[project]
name = "pong-reinforcement-learning-eval"
version = "0.1.0"
description = "Written Assignment (semester exam), Module: Reinforcement Learning, Programm: Applied Artificial Intelligence, M.Sc., Institution: IU Internatiale Hochschule, Student: Willi Kristen"
authors = [{ name = "Willi Kristen", email = "willi.kristen@live.de" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[atari]>=1.2.2",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = ["ruff>=0.14.9"]

[project.scripts]
format = "manage:format"
clean = "manage:clean"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
